src/components/debate/debate_box/DebateBox.module.scss
@use '@logora/debate.styles.theme' as theme;
@use '@logora/debate.styles.spacing' as spacing;
@use '@logora/debate.styles.display' as display;

.debateBox {
  position: relative;
  font-size: theme.$font-size-normal;
  border: theme.$box-border;
  box-shadow: theme.$box-shadow;
  border-radius: theme.$box-border-radius;
  background-color: theme.$background-color-primary;
  @include spacing.m(0, xs);
  @include spacing.p(0, xs);
}

.imageLink {
  display: block !important;
}

.debateBoxImage {
  width: 100%;
  aspect-ratio: theme.$img-aspect-ratio;
  object-fit: cover;
  cursor: pointer;
  border-top-right-radius: theme.$box-border-radius;
  border-top-left-radius: theme.$box-border-radius;
}

.debateBoxImageBox {
  position: relative;
}

.debateSuggestion {
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  position: absolute;
  gap: spacing.$spacer-xxs;
  right: spacing.$spacer;
  top: spacing.$spacer;
  @include spacing.px(2.5, xs);
  @include spacing.py(2, xs);
  background-color: theme.$call-primary;
  border-radius: theme.$box-border-radius;
  max-width: 80%;
  font-size: theme.$font-size-small;
  span {
    color: theme.$text-light;
    font-size: theme.$font-size-extra-small;
  }
  .authorSuggestion {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    max-width: 93%;
  }
  .authorName {
    @include spacing.ml(1, xs);
  }
  svg {
    fill: theme.$text-light;
  }
}

.inactiveDebate {
  @extend .debateSuggestion;
  top: unset;
  left: spacing.$spacer;
  bottom: spacing.$spacer;
  right: unset;
  color: theme.$text-light;
  @include spacing.px(2.5, xs);
  @include spacing.py(2, xs);
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  max-width: 93%;
  font-size: theme.$font-size-normal;
}

.debateBoxBody {
  display: flex;
  flex-direction: column;
  gap: spacing.$box-spacing;
  padding: spacing.$box-spacing;
}

.subApplication {
  > img {
    height: 20px;
    @include spacing.mr(2, xs);
  }
  @include spacing.mb(3, xs);
  color: theme.$text-secondary;
  font-size: theme.$font-size-extra-small;
  display: flex;
  align-items: center;
}

.debateBoxTitle {
  font-size: theme.$font-size-medium;
  font-family: theme.$box-title-font-family;
}

.debateBoxTitle {
  font-weight: theme.$font-weight-bold;
  min-height: 2.7em;
  line-height: theme.$line-height-normal;
  a {
    color: theme.$text-primary;
    &:hover{
      color: theme.$text-primary;
      text-decoration: underline;
    }
  }
}

.debateTitle {
  display: block;
  @include display.line-clamp(2);
  font-size: theme.$font-size-medium;
  line-height: theme.$line-height-normal;
  &.debateTitleMobile{
    -webkit-line-clamp: 3;
  }
}

.debateBoxFooter {
  font-size: theme.$font-size-extra-small !important;
  justify-content: space-between;
  min-height: 40px;
  display: flex !important;
  flex-direction: row !important;
  align-items: center !important;
  @include spacing.p(0, xs);
  width: 100% !important;
}

.debateBoxFooter svg {
  fill: theme.$text-primary;
}

.debateParticipantsBox {
  display: flex !important;
  flex-direction: row !important;
  @include spacing.p(0, xs);
}

.debateParticipantsEmpty {
  font-style: italic;
  font-size: theme.$font-size-extra-small;
}

.debateParticipantItem {
  margin-right: -0.5em !important;
  cursor: pointer;
  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
  border-radius: 50%;
  z-index: 1;
}

.debateBoxNumbers {
  font-size: theme.$font-size-normal;
  line-height: theme.$line-height-none;
  display: flex !important;
  flex-direction: row !important;
  align-items: flex-end !important;
  justify-content: flex-end !important;
  @include spacing.p(0, xs);
}

.debateBoxNumbersText {
  @include spacing.ml(3, xs);
  display: block;
  @include display.line-clamp(1);
  line-height: theme.$line-height-loose; 
}

.participantsCountBox {
  min-width: 40px;
  width: 40px;
  height: 40px;
  background: theme.$background-color-secondary;
  border-radius: 50%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  color: theme.$text-primary;
  font-size: theme.$font-size-extra-small;
  line-height: theme.$line-height-tight;
}

